ConfigLangParser.py
# Generated from ConfigLang.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ConfigLangParser ( Parser ):

    grammarFileName = "ConfigLang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'const'", "'len'", "<INVALID>", "<INVALID>", 
                     "'+'", "'-'", "'('", "')'", "'{'", "'}'", "'#('", "':'", 
                     "','", "'$'", "'='" ]

    symbolicNames = [ "<INVALID>", "CONST", "LEN", "NAME", "NUMBER", "PLUS", 
                      "MINUS", "LPAREN", "RPAREN", "LBRACE", "RBRACE", "HASH_LPAREN", 
                      "COLON", "COMMA", "DOLLAR", "EQUALS", "COMMENT", "WS" ]

    RULE_config = 0
    RULE_statement = 1
    RULE_constantDeclaration = 2
    RULE_value = 3
    RULE_dictionary = 4
    RULE_pair = 5
    RULE_array = 6
    RULE_constantExpression = 7
    RULE_expression = 8
    RULE_sum = 9
    RULE_product = 10
    RULE_atom = 11
    RULE_functionCall = 12

    ruleNames =  [ "config", "statement", "constantDeclaration", "value", 
                   "dictionary", "pair", "array", "constantExpression", 
                   "expression", "sum", "product", "atom", "functionCall" ]

    EOF = Token.EOF
    CONST=1
    LEN=2
    NAME=3
    NUMBER=4
    PLUS=5
    MINUS=6
    LPAREN=7
    RPAREN=8
    LBRACE=9
    RBRACE=10
    HASH_LPAREN=11
    COLON=12
    COMMA=13
    DOLLAR=14
    EQUALS=15
    COMMENT=16
    WS=17

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ConfigContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(ConfigLangParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ConfigLangParser.StatementContext)
            else:
                return self.getTypedRuleContext(ConfigLangParser.StatementContext,i)


        def getRuleIndex(self):
            return ConfigLangParser.RULE_config

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConfig" ):
                listener.enterConfig(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConfig" ):
                listener.exitConfig(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConfig" ):
                return visitor.visitConfig(self)
            else:
                return visitor.visitChildren(self)




    def config(self):

        localctx = ConfigLangParser.ConfigContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_config)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 29
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 18962) != 0):
                self.state = 26
                self.statement()
                self.state = 31
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 32
            self.match(ConfigLangParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def constantDeclaration(self):
            return self.getTypedRuleContext(ConfigLangParser.ConstantDeclarationContext,0)


        def value(self):
            return self.getTypedRuleContext(ConfigLangParser.ValueContext,0)


        def getRuleIndex(self):
            return ConfigLangParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = ConfigLangParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 36
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 34
                self.constantDeclaration()
                pass
            elif token in [4, 9, 11, 14]:
                self.enterOuterAlt(localctx, 2)
                self.state = 35
                self.value()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstantDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONST(self):
            return self.getToken(ConfigLangParser.CONST, 0)

        def NAME(self):
            return self.getToken(ConfigLangParser.NAME, 0)

        def EQUALS(self):
            return self.getToken(ConfigLangParser.EQUALS, 0)

        def value(self):
            return self.getTypedRuleContext(ConfigLangParser.ValueContext,0)


        def getRuleIndex(self):
            return ConfigLangParser.RULE_constantDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstantDeclaration" ):
                listener.enterConstantDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstantDeclaration" ):
                listener.exitConstantDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConstantDeclaration" ):
                return visitor.visitConstantDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def constantDeclaration(self):

        localctx = ConfigLangParser.ConstantDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_constantDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 38
            self.match(ConfigLangParser.CONST)
            self.state = 39
            self.match(ConfigLangParser.NAME)
            self.state = 40
            self.match(ConfigLangParser.EQUALS)
            self.state = 41
            self.value()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def dictionary(self):
            return self.getTypedRuleContext(ConfigLangParser.DictionaryContext,0)


        def array(self):
            return self.getTypedRuleContext(ConfigLangParser.ArrayContext,0)


        def NUMBER(self):
            return self.getToken(ConfigLangParser.NUMBER, 0)

        def constantExpression(self):
            return self.getTypedRuleContext(ConfigLangParser.ConstantExpressionContext,0)


        def getRuleIndex(self):
            return ConfigLangParser.RULE_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValue" ):
                listener.enterValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValue" ):
                listener.exitValue(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitValue" ):
                return visitor.visitValue(self)
            else:
                return visitor.visitChildren(self)




    def value(self):

        localctx = ConfigLangParser.ValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_value)
        try:
            self.state = 47
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [9]:
                self.enterOuterAlt(localctx, 1)
                self.state = 43
                self.dictionary()
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 2)
                self.state = 44
                self.array()
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 3)
                self.state = 45
                self.match(ConfigLangParser.NUMBER)
                pass
            elif token in [14]:
                self.enterOuterAlt(localctx, 4)
                self.state = 46
                self.constantExpression()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DictionaryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(ConfigLangParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(ConfigLangParser.RBRACE, 0)

        def pair(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ConfigLangParser.PairContext)
            else:
                return self.getTypedRuleContext(ConfigLangParser.PairContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(ConfigLangParser.COMMA)
            else:
                return self.getToken(ConfigLangParser.COMMA, i)

        def getRuleIndex(self):
            return ConfigLangParser.RULE_dictionary

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDictionary" ):
                listener.enterDictionary(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDictionary" ):
                listener.exitDictionary(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDictionary" ):
                return visitor.visitDictionary(self)
            else:
                return visitor.visitChildren(self)




    def dictionary(self):

        localctx = ConfigLangParser.DictionaryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_dictionary)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            self.match(ConfigLangParser.LBRACE)
            self.state = 58
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==3:
                self.state = 50
                self.pair()
                self.state = 55
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==13:
                    self.state = 51
                    self.match(ConfigLangParser.COMMA)
                    self.state = 52
                    self.pair()
                    self.state = 57
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 60
            self.match(ConfigLangParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PairContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(ConfigLangParser.NAME, 0)

        def COLON(self):
            return self.getToken(ConfigLangParser.COLON, 0)

        def value(self):
            return self.getTypedRuleContext(ConfigLangParser.ValueContext,0)


        def getRuleIndex(self):
            return ConfigLangParser.RULE_pair

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPair" ):
                listener.enterPair(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPair" ):
                listener.exitPair(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPair" ):
                return visitor.visitPair(self)
            else:
                return visitor.visitChildren(self)




    def pair(self):

        localctx = ConfigLangParser.PairContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_pair)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.match(ConfigLangParser.NAME)
            self.state = 63
            self.match(ConfigLangParser.COLON)
            self.state = 64
            self.value()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def HASH_LPAREN(self):
            return self.getToken(ConfigLangParser.HASH_LPAREN, 0)

        def RPAREN(self):
            return self.getToken(ConfigLangParser.RPAREN, 0)

        def value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ConfigLangParser.ValueContext)
            else:
                return self.getTypedRuleContext(ConfigLangParser.ValueContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(ConfigLangParser.COMMA)
            else:
                return self.getToken(ConfigLangParser.COMMA, i)

        def getRuleIndex(self):
            return ConfigLangParser.RULE_array

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArray" ):
                listener.enterArray(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArray" ):
                listener.exitArray(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArray" ):
                return visitor.visitArray(self)
            else:
                return visitor.visitChildren(self)




    def array(self):

        localctx = ConfigLangParser.ArrayContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_array)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self.match(ConfigLangParser.HASH_LPAREN)
            self.state = 75
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 18960) != 0):
                self.state = 67
                self.value()
                self.state = 72
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==13:
                    self.state = 68
                    self.match(ConfigLangParser.COMMA)
                    self.state = 69
                    self.value()
                    self.state = 74
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 77
            self.match(ConfigLangParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstantExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DOLLAR(self, i:int=None):
            if i is None:
                return self.getTokens(ConfigLangParser.DOLLAR)
            else:
                return self.getToken(ConfigLangParser.DOLLAR, i)

        def expression(self):
            return self.getTypedRuleContext(ConfigLangParser.ExpressionContext,0)


        def getRuleIndex(self):
            return ConfigLangParser.RULE_constantExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstantExpression" ):
                listener.enterConstantExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstantExpression" ):
                listener.exitConstantExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConstantExpression" ):
                return visitor.visitConstantExpression(self)
            else:
                return visitor.visitChildren(self)




    def constantExpression(self):

        localctx = ConfigLangParser.ConstantExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_constantExpression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.match(ConfigLangParser.DOLLAR)
            self.state = 80
            self.expression()
            self.state = 81
            self.match(ConfigLangParser.DOLLAR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def sum_(self):
            return self.getTypedRuleContext(ConfigLangParser.SumContext,0)


        def getRuleIndex(self):
            return ConfigLangParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression" ):
                return visitor.visitExpression(self)
            else:
                return visitor.visitChildren(self)




    def expression(self):

        localctx = ConfigLangParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_expression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.sum_()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SumContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def product(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ConfigLangParser.ProductContext)
            else:
                return self.getTypedRuleContext(ConfigLangParser.ProductContext,i)


        def PLUS(self, i:int=None):
            if i is None:
                return self.getTokens(ConfigLangParser.PLUS)
            else:
                return self.getToken(ConfigLangParser.PLUS, i)

        def MINUS(self, i:int=None):
            if i is None:
                return self.getTokens(ConfigLangParser.MINUS)
            else:
                return self.getToken(ConfigLangParser.MINUS, i)

        def getRuleIndex(self):
            return ConfigLangParser.RULE_sum

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSum" ):
                listener.enterSum(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSum" ):
                listener.exitSum(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSum" ):
                return visitor.visitSum(self)
            else:
                return visitor.visitChildren(self)




    def sum_(self):

        localctx = ConfigLangParser.SumContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_sum)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.product()
            self.state = 90
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==5 or _la==6:
                self.state = 86
                _la = self._input.LA(1)
                if not(_la==5 or _la==6):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 87
                self.product()
                self.state = 92
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProductContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def atom(self):
            return self.getTypedRuleContext(ConfigLangParser.AtomContext,0)


        def getRuleIndex(self):
            return ConfigLangParser.RULE_product

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProduct" ):
                listener.enterProduct(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProduct" ):
                listener.exitProduct(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProduct" ):
                return visitor.visitProduct(self)
            else:
                return visitor.visitChildren(self)




    def product(self):

        localctx = ConfigLangParser.ProductContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_product)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.atom()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AtomContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(ConfigLangParser.NAME, 0)

        def NUMBER(self):
            return self.getToken(ConfigLangParser.NUMBER, 0)

        def functionCall(self):
            return self.getTypedRuleContext(ConfigLangParser.FunctionCallContext,0)


        def LPAREN(self):
            return self.getToken(ConfigLangParser.LPAREN, 0)

        def sum_(self):
            return self.getTypedRuleContext(ConfigLangParser.SumContext,0)


        def RPAREN(self):
            return self.getToken(ConfigLangParser.RPAREN, 0)

        def getRuleIndex(self):
            return ConfigLangParser.RULE_atom

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtom" ):
                listener.enterAtom(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtom" ):
                listener.exitAtom(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAtom" ):
                return visitor.visitAtom(self)
            else:
                return visitor.visitChildren(self)




    def atom(self):

        localctx = ConfigLangParser.AtomContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_atom)
        try:
            self.state = 102
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3]:
                self.enterOuterAlt(localctx, 1)
                self.state = 95
                self.match(ConfigLangParser.NAME)
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 2)
                self.state = 96
                self.match(ConfigLangParser.NUMBER)
                pass
            elif token in [2]:
                self.enterOuterAlt(localctx, 3)
                self.state = 97
                self.functionCall()
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 4)
                self.state = 98
                self.match(ConfigLangParser.LPAREN)
                self.state = 99
                self.sum_()
                self.state = 100
                self.match(ConfigLangParser.RPAREN)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionCallContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LEN(self):
            return self.getToken(ConfigLangParser.LEN, 0)

        def LPAREN(self):
            return self.getToken(ConfigLangParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(ConfigLangParser.RPAREN, 0)

        def NAME(self):
            return self.getToken(ConfigLangParser.NAME, 0)

        def array(self):
            return self.getTypedRuleContext(ConfigLangParser.ArrayContext,0)


        def dictionary(self):
            return self.getTypedRuleContext(ConfigLangParser.DictionaryContext,0)


        def getRuleIndex(self):
            return ConfigLangParser.RULE_functionCall

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionCall" ):
                listener.enterFunctionCall(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionCall" ):
                listener.exitFunctionCall(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionCall" ):
                return visitor.visitFunctionCall(self)
            else:
                return visitor.visitChildren(self)




    def functionCall(self):

        localctx = ConfigLangParser.FunctionCallContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_functionCall)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(ConfigLangParser.LEN)
            self.state = 105
            self.match(ConfigLangParser.LPAREN)
            self.state = 109
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3]:
                self.state = 106
                self.match(ConfigLangParser.NAME)
                pass
            elif token in [11]:
                self.state = 107
                self.array()
                pass
            elif token in [9]:
                self.state = 108
                self.dictionary()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 111
            self.match(ConfigLangParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





